# IA_tres_en_raya

./: CMakeLists.txt  main.cpp
